<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/container"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/transition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:visibility="invisible"
            android:text="Calculate"/>


        <TextView
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="20dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingHorizontal="18dp"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:textSize="80sp" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="6dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/clear"
                style="@style/Grey.Button"
                android:onClick="onClickNumber"
                android:text="@string/AC" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/plusandminus"
                style="@style/Grey.Button"
                android:layout_marginHorizontal="18dp"
                android:onClick="onClickNumber"
                android:text="@string/plusandminus" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/percent"
                style="@style/Grey.Button"
                android:onClick="onClickNumber"
                android:text="@string/percent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/divide"
                style="@style/Orange.Button"
                android:layout_marginStart="18dp"
                android:onClick="onOperationClick"
                android:text="@string/divide" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="6dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/seven"
                style="@style/DarkGrey.Button"
                android:onClick="onClickNumber"
                android:text="@string/seven" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/eight"
                style="@style/DarkGrey.Button"
                android:layout_marginHorizontal="18dp"
                android:onClick="onClickNumber"
                android:text="@string/eight" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/nine"
                style="@style/DarkGrey.Button"
                android:onClick="onClickNumber"
                android:text="@string/nine" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/multiply"
                style="@style/Orange.Button"
                android:layout_marginStart="18dp"
                android:onClick="onOperationClick"
                android:text="@string/multiply" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="6dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/four"
                style="@style/DarkGrey.Button"
                android:onClick="onClickNumber"
                android:text="@string/four" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/five"
                style="@style/DarkGrey.Button"
                android:layout_marginHorizontal="18dp"
                android:onClick="onClickNumber"
                android:text="@string/five" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/six"
                style="@style/DarkGrey.Button"
                android:onClick="onClickNumber"
                android:text="@string/six" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/minus"
                style="@style/Orange.Button"
                android:layout_marginStart="18dp"
                android:onClick="onOperationClick"
                android:text="@string/minus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="6dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/one"
                style="@style/DarkGrey.Button"
                android:onClick="onClickNumber"
                android:text="@string/one" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/two"
                style="@style/DarkGrey.Button"
                android:layout_marginHorizontal="18dp"
                android:onClick="onClickNumber"
                android:text="@string/two" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/three"
                style="@style/DarkGrey.Button"
                android:onClick="onClickNumber"
                android:text="@string/three" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/plus"
                style="@style/Orange.Button"
                android:layout_marginStart="18dp"
                android:onClick="onOperationClick"
                android:text="@string/plus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="6dp">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/zero"
                style="@style/DarkGrey.Button"
                android:layout_width="178dp"
                android:onClick="onClickNumber"
                android:paddingStart="32dp"
                android:text="@string/zero"
                android:textAlignment="textStart" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dot"
                style="@style/DarkGrey.Button"
                android:layout_marginHorizontal="18dp"
                android:onClick="onClickNumber"
                android:text="@string/dot" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/equals"
                style="@style/Orange.Button"
                android:onClick="onOperationClick"
                android:text="@string/equals" />
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>